# ermete-os

./: .gitignore  .graphify_ast.json  .graphify_detect.json  Containerfile  Justfile  README.md  a.txt  bls.txt  build-safe.sh  build_all_local.sh  build_os_local.sh  cosign.pub  ermete-base-blueprint.md  ermete-debug.sh  ermete-install.ks  fast-track-forge.sh  fix_idempotency.py  fix_orchestrator.py  fix_orchestrator_v3.py  fix_repos.py  fix_repos_indent.py  fix_workflows.py  gemini.md  id_ed25519  id_ed25519.pub  inject.sh  local_build_test.sh  local_build_test_astal.sh  local_forge_build.sh  local_upstream_build.sh  merge.sh  merge_workflows.py  ostree_boot.txt  patch_custom_jobs.py  patch_idempotency.py  test_find_version.sh  test_script.sh
.agents/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md
.agents/auditor/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger/: BRIEFING.md  ORIGINAL_REQUEST.md  challenge_report.md  handoff.md  (+4 more)
.github/: renovate.json5
RPMS_OUT/: kernel-headers-7.1.2-1.x86_64.rpm
build_files/: build.sh
builder/: Containerfile  rpmfusion-custom.repo
config/: apply-quirks.sh  packages.json  rolling_packages.txt  rpmmacros  upstream_cli.txt  upstream_core.txt  upstream_desktop.txt  upstream_media.txt
core/: Containerfile  Justfile  README.md  ermete-install.ks  fast-track-forge.sh
disk_config/: disk.toml  iso.toml
docs/: AUTONOMOUS_FORGE.md  core-security-audit.md
ermete-ui-agent/: agent.py
forge/: .gitignore  Containerfile  README-build-local.md  README.md
forge/specs/ermete-daemon-rs/ermete-daemon-rs-0.2.1/: Cargo.toml  org.ermete.Settings.service
forge/specs/ermete-daemon-rs/ermete-daemon-rs-0.2.1/src/: continuity.rs  main.rs  network.rs  portal_screencast.rs  power.rs  secret_enroller.rs  settings.rs
forge/specs/ermete-lvfs-rs/ermete-lvfs-rs-1.0.0/: Cargo.toml  os.ermete.Lvfs.conf  os.ermete.lvfs.policy
forge/specs/ermete-lvfs-rs/ermete-lvfs-rs-1.0.0/src/: dbus.rs  firmware.rs  main.rs
forge/specs/ermete-mdm-rs/ermete-mdm-rs-1.0.0/: Cargo.toml  os.ermete.Mdm.conf  os.ermete.mdm.policy
forge/specs/ermete-mdm-rs/ermete-mdm-rs-1.0.0/src/: dbus.rs  main.rs  wipe.rs
forge/specs/ermete-recovery/ermete-recovery-1.0.0/: Cargo.toml
forge/specs/ermete-recovery/ermete-recovery-1.0.0/systemd/: ermete-recovery.target  greetd-recovery-fallback.conf
forge/specs/ermete-settings-rs/ermete-settings-rs-1.0.0/: Cargo.toml
forge/specs/ermete-settings-rs/ermete-settings-rs-1.0.0/src/: main.rs  settings_proxy.rs  style.rs
forge/specs/ermete-settings-rs/ermete-settings-rs-1.0.0/src/pages/: accounts.rs  appearance.rs  audio.rs  bluetooth.rs  desktop.rs  focus.rs  labs.rs  mod.rs  mouse.rs  network.rs  notifications.rs  privacy.rs  wired.rs
forge/specs/ermete-xdg-desktop-portal-ermete/xdg-desktop-portal-ermete-1.0.0/: Cargo.toml  ermete.portal  org.freedesktop.impl.portal.desktop.ermete.service
forge/specs/ermete-xdg-desktop-portal-ermete/xdg-desktop-portal-ermete-1.0.0/src/: portal.rs
logs2_dir/: 0_trigger.txt
logs3_dir/: 1_ЁЯОо Build NVIDIA KMOD.txt  7_ЁЯза Build Chimera Kernel (CachyOS + Clear).txt  8_ЁЯза Orchestrator Brain.txt  9_ЁЯПЧя╕П Build Base Builder.txt
logs4_dir/: 0_trigger.txt
logs5_dir/: 6_ЁЯОо Build NVIDIA KMOD.txt  7_ЁЯза Build Chimera Kernel (CachyOS + Clear).txt  8_ЁЯПЧя╕П Build Base Builder.txt  9_ЁЯза Orchestrator Brain.txt
logs6_dir/: 1_ЁЯОо Build NVIDIA KMOD.txt  7_ЁЯза Build Chimera Kernel (CachyOS + Clear).txt  8_ЁЯза Orchestrator Brain.txt  9_ЁЯПЧя╕П Build Base Builder.txt
logs7_dir/: 1_ЁЯОо Build NVIDIA KMOD.txt  7_ЁЯза Build Chimera Kernel (CachyOS + Clear).txt  8_ЁЯПЧя╕П Build Base Builder.txt  9_ЁЯза Orchestrator Brain.txt
logs_73393748402/: 0_Build and push image.txt
logs_73396956339/: 0_Build and push image.txt
logs_73399543146/: 0_Build and push image.txt
logs_73401454785/: 0_Build and push image.txt
logs_73403200821/: 0_Build and push image.txt
logs_73406034677/: 0_Build and push image.txt
logs_73513724118/: 0_Build and push image.txt
logs_73527389111/: 0_Build and push image.txt
logs_dir/: 1_ЁЯОо Build NVIDIA KMOD.txt  7_ЁЯза Build Chimera Kernel (CachyOS + Clear).txt  8_ЁЯза Orchestrator Brain.txt  9_ЁЯПЧя╕П Build Base Builder.txt
output_tmp/: manifest-qcow2.json
scripts/: build_rolling_local.sh  check_idempotency.sh  dynamic-matrix.sh  fetch_repo_rpms.sh  forge-kernel-matrix.py  forge_kernel_matrix.py  idempotency_checker.py  internal_quirks_build.sh  test_forge_kernel_matrix.py
specs/ermete-backup/ermete-backup-1.0.0/: Cargo.toml
specs/ermete-backup/ermete-backup-1.0.0/src/: daemon.rs  ui.rs
specs/ermete-shell-rs/ermete-shell-rs-1.0.0/: Cargo.toml
specs/ermete-shell-rs/ermete-shell-rs-1.0.0/src/: greeter.rs  main.rs  topbar.rs
specs/ermete-shell-rs/ermete-shell-rs-1.0.0/src/core/: dock_data.rs  live_state.rs  mod.rs  mpris.rs  network.rs  niri_state.rs  spring.rs  system_proxies.rs
specs/ermete-shell-rs/ermete-shell-rs-1.0.0/src/ui/: a11y.rs  clipboard.rs  control_center.rs  control_center_relm4.rs  desktop_widgets.rs  dock.rs  gatekeeper_prompt.rs  generative.rs  mission_control.rs  mod.rs  notifications.rs  osd.rs  powermenu.rs  privacy_prompt.rs  spotlight.rs  spring.rs  store.rs  topbar.rs  topbar_relm4.rs
specs/ermete-store-rs/ermete-store-rs-1.0.0/: Cargo.toml  os.ermete.store.policy
specs/ermete-store-rs/ermete-store-rs-1.0.0/src/: dbus.rs  flathub.rs  flatpak.rs  main.rs
(+10475 files in other folders)
