[package]
name = "ermete-shell-rs"
version = "1.0.0"
edition = "2021"
authors = ["Ermete Forge <forge@ermete.os>"]
description = "Pure Rust native shell for Ermete OS"

[dependencies]
gtk4 = "0.7"
gtk4-layer-shell = "0.2"
glib = "0.18"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
zbus = "5.17.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
notify = "8.2.0"
