[package]
name = "ermete-shell-rs"
version = "1.0.0"
edition = "2021"
authors = ["Ermete Forge <forge@ermete.os>"]
description = "Pure Rust native shell for Ermete OS"

[dependencies]
gtk4 = "0.7"
gtk4-layer-shell = "0.2"
glib = "0.18"
chrono = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
zbus = "5.17.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "rt", "sync"] }
notify = "8.2.0"
clap = { version = "4.6.1", features = ["derive"] }
greetd_ipc = "0.10.3"
meval = "0.2"
futures-util = "0.3.32"
tts = "0.26"
