[package]
name = "ermete-daemon-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
zbus = { version = "5.17.0", features = ["tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
futures-util = "0.3.32"
libc = "0.2"
chacha20poly1305 = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
tracing = "0.1"
