[package]
name = "ermete-lvfs-rs"
version = "1.0.0"
edition = "2021"
description = "Ermete OS Firmware & LVFS Automation Daemon"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
zbus = "4.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
