[package]
name = "ermete-mdm-rs"
version = "1.0.0"
edition = "2021"
description = "Ermete OS Mobile Device Management (Anti-Theft & Remote Wipe)"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
zbus = "4.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
