[package]
name = "ermete-settings-rs"
version = "1.0.0"
edition = "2021"
authors = ["Ermete Forge <forge@ermete.os>"]
description = "Pure Rust native System Settings for Ermete OS"

[dependencies]
gtk4 = "0.7"
glib = "0.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
zbus = "3.14"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
libc = "0.2.186"
relm4 = "0.7"
